testsuite/poke.pkl/acons-diag-5.pk
/* { dg-do compile } */

type Array = int[];

var a
  = Array ("foo"); /* { dg-error ".*\n.*" } */
